ENH Adds soslutions to section 3

--- a/notebooks/01-model-evaluation.ipynb
+++ b/notebooks/01-model-evaluation.ipynb
@@ -341,7 +341,7 @@
     "1. Plot the roc curve of the logistic regression model and the random forest model on the same axes.\n",
     "2. Train a `sklearn.dummy.DummyClassifier(strategy='prior')` on the training dataset and plot the precision recall curve and the roc curve with the test dataset.\n",
     "3. What is the ROC AUC and the average precision for the dummy classifer?\n",
-    "4. **Extra**: Compute the f1 score for three models we have trained so far. While model performs the best according to the f1 score?"
+    "4. **Extra**: Compute the f1 score for three models we have trained so far. While model performs the best according to the f1 score? **Hint:** `f1_score` is in `sklearn.metrics`"
    ]
   },
   {
@@ -357,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load solutions/01-ex03-solutions.py"
+    "# %load solutions/01-ex02-solutions.py"
    ]
   },
   {
@@ -749,6 +749,13 @@
     "1. Train a random forest regressor on the training dataset.\n",
     "2. Evaluate the random forest regressor on the test dataset and compare it to the ridge results."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
