--- a/notebooks/03-model-inspection.ipynb
+++ b/notebooks/03-model-inspection.ipynb
@@ -6,6 +6,712 @@
    "source": [
     "# Model Inspection"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import sklearn\n",
+    "\n",
+    "import seaborn as sns\n",
+    "sns.set_theme(font_scale=1.2)\n",
+    "plt.rcParams['figure.figsize'] = [12, 8]\n",
+    "plt.rcParams['savefig.bbox'] = 'tight'\n",
+    "plt.rcParams[\"savefig.dpi\"] = 300\n",
+    "\n",
+    "sklearn.set_config(display='diagram')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import fetch_california_housing\n",
+    "\n",
+    "california = fetch_california_housing(as_frame=True)\n",
+    "X, y = california.data, california.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insert random data for demonstration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X = X.assign(\n",
+    "    ran_num=np.arange(0, X.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train linear model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "ridge = Pipeline([\n",
+    "    ('scale', StandardScaler()),\n",
+    "    ('reg', Ridge())\n",
+    "])\n",
+    "ridge.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ridge.score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ridge.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot coefficients\n",
+    "\n",
+    "Coefficients represent the relationship between a feature and the target assuming that all other features remain constant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_linear_coef(coefs, names, ax=None, sorted=False):\n",
+    "    if ax is None:\n",
+    "        fig, ax = plt.subplots()\n",
+    "    coefs = pd.DataFrame(\n",
+    "       coefs, columns=['Coefficients'],\n",
+    "       index=names\n",
+    "    )\n",
+    "    \n",
+    "    if sorted:\n",
+    "        coefs = coefs.sort_values(by='Coefficients')\n",
+    "\n",
+    "    coefs.plot(kind='barh', ax=ax)\n",
+    "    ax.axvline(x=0, color='.5')\n",
+    "    return ax\n",
+    "\n",
+    "plot_linear_coef(ridge['reg'].coef_, names=X_train.columns, sorted=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Coefficient variability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import RepeatedKFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_ridges = cross_validate(\n",
+    "    ridge, X, y, cv=RepeatedKFold(n_splits=5, n_repeats=5),\n",
+    "    return_estimator=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_ridges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coefs = pd.DataFrame(\n",
+    "   [model['reg'].coef_ for model in cv_ridges['estimator']],\n",
+    "   columns=X.columns\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coefs.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting the variability of the cofficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "_ = plt.boxplot(coefs, vert=False, labels=coefs.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1\n",
+    "\n",
+    "1. Use a `Lasso` to fit the training dataset with `alpha=0.04`. **Hint:** Be sure to use a pipeline.\n",
+    "3. Plot `Lasso`'s coefficients next to the `Ridge` coefficients. How do they differ? **Hint** Use `plot_linear_coef`.\n",
+    "3. Use `RepeatedKFold` and `cross_validate` to check the variability of cofficients for `Lasso`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/03-ex01-solutions.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "rf = RandomForestRegressor(random_state=42)\n",
+    "rf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf.score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_importances(importances, names, ax=None):\n",
+    "    if ax is None:\n",
+    "        fig, ax = plt.subplots()\n",
+    "    indices = np.argsort(importances)\n",
+    "    ax.barh(range(len(importances)), importances[indices])\n",
+    "    ax.set(yticks=range(len(importances)),\n",
+    "           yticklabels=np.array(names)[indices]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importances = rf.feature_importances_\n",
+    "plot_importances(importances, X_train.columns);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pay attention to `ran_num`!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Permutation Feature Importance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First on Test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_result_test = permutation_importance(rf, X_test, y_test,\n",
+    "                                        n_repeats=15, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_permutation_importance(perm_results, names, ax=None):\n",
+    "    perm_sorted_idx = perm_results.importances_mean.argsort()\n",
+    "    if ax is None:\n",
+    "        fig, ax = plt.subplots()\n",
+    "    _ = ax.boxplot(perm_results.importances[perm_sorted_idx].T, vert=False,\n",
+    "                   labels=np.array(names)[perm_sorted_idx])\n",
+    "    return ax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plot_permutation_importance(rf_result_test, X_test.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "\n",
+    "1. Compute the permutation importance for `Lasso` on the test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/03-ex02-solutions.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load cancer dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_breast_cancer\n",
+    "\n",
+    "data = load_breast_cancer()\n",
+    "X, y = data.data, data.target\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rf = RandomForestClassifier(random_state=42)\n",
+    "rf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Permutation importance with random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.inspection import permutation_importance\n",
+    "\n",
+    "rf_result = permutation_importance(rf, X_train, y_train,\n",
+    "                                   n_repeats=30, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plot_permutation_importance(rf_result, data.feature_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Most features are not useful?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import spearmanr\n",
+    "from scipy.cluster import hierarchy\n",
+    "\n",
+    "corr = spearmanr(X_train).correlation\n",
+    "corr_linkage = hierarchy.ward(corr)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(18, 12))\n",
+    "dendro = hierarchy.dendrogram(\n",
+    "    corr_linkage, labels=data.feature_names.tolist(),\n",
+    "    orientation='right', ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "dendro_idx = np.arange(0, len(dendro['ivl']))\n",
+    "\n",
+    "ax.imshow(corr[dendro['leaves'], :][:, dendro['leaves']], cmap='viridis')\n",
+    "ax.set_xticks(dendro_idx)\n",
+    "ax.set_yticks(dendro_idx)\n",
+    "ax.set_xticklabels(dendro['ivl'], rotation='vertical')\n",
+    "ax.set_yticklabels(dendro['ivl']);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Manutally pick a threshold based on visual inspection of the dendrogram to group faetures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "cluster_ids = hierarchy.fcluster(corr_linkage, 1, criterion='distance')\n",
+    "cluster_id_to_feature_ids = defaultdict(list)\n",
+    "for idx, cluster_id in enumerate(cluster_ids):\n",
+    "    cluster_id_to_feature_ids[cluster_id].append(idx)\n",
+    "selected_features = [v[0] for v in cluster_id_to_feature_ids.values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_sel = X_train[:, selected_features]\n",
+    "X_test_sel = X_test[:, selected_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_sel = RandomForestClassifier(random_state=42)\n",
+    "rf_sel.fit(X_train_sel, y_train)\n",
+    "print(\"Accuracy on test data with features removed: {:.2f}\".format(\n",
+    "      clf_sel.score(X_test_sel, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature importance with selected features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.inspection import permutation_importance\n",
+    "\n",
+    "rf_sel_result = permutation_importance(\n",
+    "    rf_sel, X_test_sel, y_test, n_repeats=30, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_sel = data.feature_names[selected_features]\n",
+    "_ = plot_permutation_importance(rf_sel_result, features_sel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Partial Dependence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train a HistGradientBostingClassifer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.experimental import enable_hist_gradient_boosting\n",
+    "from sklearn.ensemble import HistGradientBoostingClassifier "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist = HistGradientBoostingClassifier(random_state=0)\n",
+    "hist.fit(X_train_sel, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist.score(X_test_sel, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.inspection import plot_partial_dependence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_partial_dependence(hist, X_train_sel,\n",
+    "                        features=['mean radius', 'mean concavity',\n",
+    "                                  'mean texture', 'mean symmetry'],\n",
+    "                        feature_names=features_sel,\n",
+    "                        n_cols=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3\n",
+    "\n",
+    "1. Load the boston dataset using `sklearn.datasets.load_boston`.\n",
+    "1. Split the data into a training and test set.\n",
+    "1. Train a `sklearn.ensemble.GradientBoostingRegressor` on the training set and evalute on the test set.\n",
+    "1. Plot the feature_importances_ uses `plot_importances`\n",
+    "1. What are the 4 most important features according to `feature_importances_`?\n",
+    "1. What are the 4 most important features according to permutation importance on the test set?\n",
+    "1. Plot the partial dependence for the 4 most important features according to permutation importance.\n",
+    "1. Plot the partial dependence setting `features=[('LSTAT', 'RM')]` to get a bivariate parital dependence plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/03-ex03-solutions.py"
+   ]
   }
  ],
  "metadata": {
