ENH Better solution

--- a/notebooks/01-model-evaluation.ipynb
+++ b/notebooks/01-model-evaluation.ipynb
@@ -642,6 +642,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
     "ridge = make_pipeline(StandardScaler(), Ridge())\n",
     "ridge.fit(X_train, y_train)"
    ]
@@ -681,7 +683,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r2_score(y_test, ridge_pred)"
+    "ridge_r2 = r2_score(y_test, ridge_pred)\n",
+    "ridge_r2"
    ]
   },
   {
@@ -690,7 +693,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_squared_error(y_test, ridge_pred)"
+    "ridge_mse = mean_squared_error(y_test, ridge_pred)\n",
+    "ridge_mse"
    ]
   },
   {
@@ -699,7 +703,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_absolute_error(y_test, ridge_pred)"
+    "ridge_mae = mean_absolute_error(y_test, ridge_pred)\n",
+    "ridge_mae"
    ]
   },
   {
@@ -762,45 +767,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "\n",
-    "rf = RandomForestRegressor(random_state=42).fit(X_train, y_train)\n",
-    "rf_pred = rf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r2_score(y_test, rf_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean_squared_error(y_test, rf_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean_absolute_error(y_test, rf_pred)"
+    "# %load solutions/01-ex04-solutions.py"
    ]
   },
   {
