--- a/notebooks/03-model-inspection.ipynb
+++ b/notebooks/03-model-inspection.ipynb
@@ -371,6 +371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.inspection import permutation_importance\n",
+    "\n",
     "rf_result_test = permutation_importance(rf, X_test, y_test,\n",
     "                                        n_repeats=15, n_jobs=-1)"
    ]
@@ -584,7 +586,7 @@
     "rf_sel = RandomForestClassifier(random_state=42)\n",
     "rf_sel.fit(X_train_sel, y_train)\n",
     "print(\"Accuracy on test data with features removed: {:.2f}\".format(\n",
-    "      clf_sel.score(X_test_sel, y_test)))"
+    "      rf_sel.score(X_test_sel, y_test)))"
    ]
   },
   {
