ENH Adjust envs

--- a/notebooks/02-model-calibration.ipynb
+++ b/notebooks/02-model-calibration.ipynb
@@ -439,9 +439,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml-workshop-intermediate-2-of-2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ml-workshop-intermediate-2-of-2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
