ENH Update to 0.24

--- a/notebooks/01-model-evaluation.ipynb
+++ b/notebooks/01-model-evaluation.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = (y == '1')"
+    "y = (y == '1').astype('int')"
    ]
   },
   {
@@ -231,6 +231,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Using probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_proba = log_reg.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_proba[65:70]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred[65:70]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Threshold at 0.50"
    ]
   },
@@ -240,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_50 = log_reg.predict_proba(X_test)[:, 1] > 0.5\n",
+    "y_pred_50 = y_proba[:, 1] > 0.5\n",
     "print(classification_report(y_test, y_pred_50))"
    ]
   },
@@ -248,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Threshold at 0.25 "
+    "### Threshold at 0.25"
    ]
   },
   {
@@ -257,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_25 = log_reg.predict_proba(X_test)[:, 1] > 0.25\n",
+    "y_pred_25 = y_proba[:, 1] > 0.25\n",
     "print(classification_report(y_test, y_pred_25))"
    ]
   },
@@ -274,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_75 = log_reg.predict_proba(X_test)[:, 1] > 0.75\n",
+    "y_pred_75 = y_proba[:, 1] > 0.75\n",
     "print(classification_report(y_test, y_pred_75))"
    ]
   },
@@ -328,8 +362,8 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "plot_precision_recall_curve(log_reg, X_test, y_test, ax=ax, name=\"LogisticRegression\")\n",
-    "plot_precision_recall_curve(rf, X_test, y_test, ax=ax)"
+    "plot_precision_recall_curve(log_reg, X_test, y_test, ax=ax, name=\"Logistic Regression\")\n",
+    "plot_precision_recall_curve(rf, X_test, y_test, ax=ax, name=\"Random Forest\")"
    ]
   },
   {
@@ -678,6 +712,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Look at predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ridge_pred[:10]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -752,7 +802,7 @@
     "## Exercise 4\n",
     "\n",
     "1. Train a random forest regressor on the training dataset.\n",
-    "2. Evaluate the random forest regressor on the test dataset and compare it to the ridge results."
+    "2. Evaluate the random forest regressor on the test dataset and compare it to the ridge results with `r2_score`, `mean_sqaured_error`, `mean_absolute_error`."
    ]
   },
   {
@@ -835,7 +885,7 @@
    "outputs": [],
    "source": [
     "X_analysis = X_test.assign(\n",
-    "    delta_pred=y_test - ridge_pred\n",
+    "    delta=y_test - ridge_pred\n",
     ")"
    ]
   },
@@ -856,7 +906,7 @@
     "    if i >= n_features:\n",
     "        ax.set_visible(False)\n",
     "        continue\n",
-    "    sns.scatterplot(x=columns[i], y='delta_pred', ax=ax, data=X_analysis)\n",
+    "    sns.scatterplot(x=columns[i], y='delta', ax=ax, data=X_analysis)\n",
     "    ax.axhline(y=0, c='k', ls='--')"
    ]
   }
@@ -877,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
