--- a/notebooks/03-model-inspection.ipynb
+++ b/notebooks/03-model-inspection.ipynb
@@ -79,8 +79,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "X = X.assign(\n",
-    "    ran_num=np.arange(0, X.shape[0]))"
+    "X = X.assign(ran_num=np.arange(0, X.shape[0]))"
    ]
   },
   {
@@ -203,8 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv_ridges = cross_validate(\n",
-    "    ridge, X, y, cv=RepeatedKFold(n_splits=5, n_repeats=5),\n",
+    "ridges_cv = cross_validate(\n",
+    "    ridge, X_train, y_train, cv=RepeatedKFold(n_splits=5, n_repeats=5),\n",
     "    return_estimator=True)"
    ]
   },
@@ -214,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv_ridges"
+    "ridges_cv"
    ]
   },
   {
@@ -223,8 +222,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coefs = pd.DataFrame(\n",
-    "   [model['reg'].coef_ for model in cv_ridges['estimator']],\n",
+    "ridge_coefs = pd.DataFrame(\n",
+    "   [model['reg'].coef_ for model in ridges_cv['estimator']],\n",
     "   columns=X.columns\n",
     ")"
    ]
@@ -252,7 +251,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "_ = plt.boxplot(coefs, vert=False, labels=coefs.columns)"
+    "_ = ax.boxplot(ridge_coefs, vert=False, labels=coefs.columns)"
    ]
   },
   {
@@ -261,7 +260,7 @@
    "source": [
     "## Exercise 1\n",
     "\n",
-    "1. Use a `Lasso` to fit the training dataset with `alpha=0.04`. **Hint:** Be sure to use a pipeline.\n",
+    "1. Use a `Lasso` to fit the training dataset with `alpha=0.06`. **Hint:** Be sure to use a pipeline.\n",
     "3. Plot `Lasso`'s coefficients next to the `Ridge` coefficients. How do they differ? **Hint** Use `plot_linear_coef`.\n",
     "3. Use `RepeatedKFold` and `cross_validate` to check the variability of cofficients for `Lasso`."
    ]
@@ -272,6 +271,72 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "lasso = Pipeline([\n",
+    "    ('scale', StandardScaler()),\n",
+    "    ('reg', Lasso(alpha=0.06))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lasso.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 9))\n",
+    "plot_linear_coef(lasso['reg'].coef_, names=X_train.columns, sorted=True, ax=ax1);\n",
+    "plot_linear_coef(ridge['reg'].coef_, names=X_train.columns, sorted=True, ax=ax2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lasso_cvs = cross_validate(\n",
+    "    lasso, X_train, y_train, return_estimator=True, cv=RepeatedKFold(n_splits=5, n_repeats=5)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lasso_coefs = pd.DataFrame(\n",
+    "   [model['reg'].coef_ for model in lasso_cvs['estimator']],\n",
+    "   columns=X.columns\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "_ = ax.boxplot(lasso_coefs, vert=False, labels=coefs.columns)"
+   ]
   },
   {
    "cell_type": "code",
@@ -362,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### First on Test data"
+    "### Can be used on the test data!"
    ]
   },
   {
@@ -373,8 +438,8 @@
    "source": [
     "from sklearn.inspection import permutation_importance\n",
     "\n",
-    "rf_result_test = permutation_importance(rf, X_test, y_test,\n",
-    "                                        n_repeats=15, n_jobs=-1)"
+    "rf_perm_results = permutation_importance(rf, X_test, y_test,\n",
+    "                                        n_repeats=10, n_jobs=-1)"
    ]
   },
   {
@@ -398,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plot_permutation_importance(rf_result_test, X_test.columns)"
+    "_ = plot_permutation_importance(rf_perm_results, X_test.columns)"
    ]
   },
   {
@@ -485,7 +550,7 @@
     "from sklearn.inspection import permutation_importance\n",
     "\n",
     "rf_result = permutation_importance(rf, X_train, y_train,\n",
-    "                                   n_repeats=30, n_jobs=-1)"
+    "                                   n_repeats=10, n_jobs=-1)"
    ]
   },
   {
@@ -605,7 +670,7 @@
     "from sklearn.inspection import permutation_importance\n",
     "\n",
     "rf_sel_result = permutation_importance(\n",
-    "    rf_sel, X_test_sel, y_test, n_repeats=30, n_jobs=-1)"
+    "    rf_sel, X_test_sel, y_test, n_repeats=10, n_jobs=-1)"
    ]
   },
   {
@@ -690,9 +755,15 @@
     "## Exercise 3\n",
     "\n",
     "1. Load the boston dataset using `sklearn.datasets.load_boston`.\n",
+    "\n",
+    "```python\n",
+    "from sklearn.datasets import load_boston\n",
+    "boston = load_boston()\n",
+    "```\n",
+    "\n",
     "1. Split the data into a training and test set.\n",
     "1. Train a `sklearn.ensemble.GradientBoostingRegressor` on the training set and evalute on the test set.\n",
-    "1. Plot the feature_importances_ uses `plot_importances`\n",
+    "1. Plot the feature_importances_ uses `plot_importances`. **Hint** The names are given in `boston.feature_names`\n",
     "1. What are the 4 most important features according to `feature_importances_`?\n",
     "1. What are the 4 most important features according to permutation importance on the test set?\n",
     "1. Plot the partial dependence for the 4 most important features according to permutation importance.\n",
@@ -732,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
