--- a/notebooks/02-model-calibration.ipynb
+++ b/notebooks/02-model-calibration.ipynb
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf = RandomForestClassifier(random_state=42)\n",
+    "rf = RandomForestClassifier(random_state=0)\n",
     "cal_rf = CalibratedClassifierCV(rf, method=\"isotonic\")\n",
     "cal_rf.fit(X_train, y_train)"
    ]
@@ -363,7 +363,7 @@
     "plot_calibration_curve(y_test, rf_proba[:, 1], ax=ax1, n_bins=10)\n",
     "ax1.set_title(f\"forest no calibration: {rf_brier:0.4f}\")\n",
     "plot_calibration_curve(y_test, cal_rf_proba[:, 1], ax=ax2, n_bins=10)\n",
-    "ax2.set_title(f\"isotonic: {cal_rf_brier:0.4f}\");"
+    "ax2.set_title(f\"calibrated: {cal_rf_brier:0.4f}\");"
    ]
   },
   {
@@ -405,7 +405,7 @@
     "plot_calibration_curve(y_test, lr_proba[:, 1], ax=ax1, n_bins=10)\n",
     "ax1.set_title(f\"no calibration: {lr_brier:0.4f}\")\n",
     "plot_calibration_curve(y_test, cal_lr_proba[:, 1], ax=ax2, n_bins=10)\n",
-    "ax2.set_title(f\"isotonic: {cal_lr_brier:0.4f}\");"
+    "ax2.set_title(f\"calibrated: {cal_lr_brier:0.4f}\");"
    ]
   },
   {
@@ -414,6 +414,7 @@
    "source": [
     "## Exercise 2\n",
     "\n",
+    "0. Finish Exercise 1 for training an uncalibrated `GaussianNB`.\n",
     "1. Calibrate the `sklearn.naive_bayes.GaussianNB` on the training set.\n",
     "2. Compute the brier score loss on the test set.\n",
     "3. Plot the calibration curve with `n_bins=10`.\n",
@@ -453,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
