ENH Adds colab links

--- a/notebooks/slide-images.ipynb
+++ b/notebooks/slide-images.ipynb
@@ -483,9 +483,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml-workshop-intermediate-2-of-2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ml-workshop-intermediate-2-of-2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -497,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
