--- a/notebooks/01-model-evaluation.ipynb
+++ b/notebooks/01-model-evaluation.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Evaluation"
+    "# Model Evaluation\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/01-model-evaluation.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install dependencies for google colab\n",
+    "import sys\n",
+    "IN_COLAB = 'google.colab' in sys.modules\n",
+    "if IN_COLAB:\n",
+    "    %pip install -r https://raw.githubusercontent.com/thomasjpfan/ml-workshop-intermediate-2-of-2/master/requirements.txt"
    ]
   },
   {
@@ -14,6 +29,15 @@
    "outputs": [],
    "source": [
     "import sklearn\n",
+    "assert sklearn.__version__.startswith(\"1.0\"), \"Plese install scikit-learn 1.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -913,7 +937,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -927,7 +951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
