DOC Adds Better colab support

--- a/notebooks/02-model-calibration.ipynb
+++ b/notebooks/02-model-calibration.ipynb
@@ -45,7 +45,6 @@
     "plt.rcParams['font.size'] = 16\n",
     "plt.rcParams['figure.figsize'] = [12, 8]\n",
     "plt.rcParams['savefig.bbox'] = 'tight'\n",
-    "plt.rcParams[\"savefig.dpi\"] = 300\n",
     "\n",
     "sklearn.set_config(display='diagram')"
    ]
@@ -324,6 +323,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If you are running locally**, you can uncomment the following cell to load the solution into the cell. On **Google Colab**, [see solution here](https://github.com/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/solutions/02-ex01-solutions.py)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -451,6 +457,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If you are running locally**, you can uncomment the following cell to load the solution into the cell. On **Google Colab**, [see solution here](https://github.com/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/solutions/02-ex02-solutions.py)."
+   ]
   },
   {
    "cell_type": "code",
