--- a/notebooks/01-model-evaluation.ipynb
+++ b/notebooks/01-model-evaluation.ipynb
@@ -46,7 +46,6 @@
     "plt.rcParams['figure.figsize'] = [12, 8]\n",
     "plt.rcParams['lines.linewidth'] = 2.5\n",
     "plt.rcParams['savefig.bbox'] = 'tight'\n",
-    "plt.rcParams[\"savefig.dpi\"] = 300\n",
     "\n",
     "sklearn.set_config(display='diagram')"
    ]
@@ -217,6 +216,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If you are running locally**, you can uncomment the following cell to load the solution into the cell. On **Google Colab**, [see solution here](https://github.com/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/solutions/01-ex01-solutions.py).  "
+   ]
   },
   {
    "cell_type": "code",
@@ -410,6 +416,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If you are running locally**, you can uncomment the following cell to load the solution into the cell. On **Google Colab**, [see solution here](https://github.com/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/solutions/01-ex02-solutions.py)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -557,6 +570,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If you are running locally**, you can uncomment the following cell to load the solution into the cell. On **Google Colab**, [see solution here](https://github.com/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/solutions/01-ex03-solutions.py)."
+   ]
   },
   {
    "cell_type": "code",
@@ -835,6 +855,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If you are running locally**, you can uncomment the following cell to load the solution into the cell. On **Google Colab**, [see solution here](https://github.com/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/solutions/01-ex04-solutions.py)."
+   ]
   },
   {
    "cell_type": "code",
