--- a/notebooks/03-model-inspection.ipynb
+++ b/notebooks/03-model-inspection.ipynb
@@ -48,7 +48,6 @@
     "sns.set_theme(font_scale=1.2)\n",
     "plt.rcParams['figure.figsize'] = [12, 8]\n",
     "plt.rcParams['savefig.bbox'] = 'tight'\n",
-    "plt.rcParams[\"savefig.dpi\"] = 300\n",
     "\n",
     "sklearn.set_config(display='diagram')"
    ]
@@ -260,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coefs.head()"
+    "ridge_coefs.head()"
    ]
   },
   {
@@ -277,7 +276,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "_ = ax.boxplot(ridge_coefs, vert=False, labels=coefs.columns)"
+    "_ = ax.boxplot(ridge_coefs, vert=False, labels=ridge_coefs.columns)"
    ]
   },
   {
@@ -299,69 +298,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.linear_model import Lasso\n",
-    "lasso = Pipeline([\n",
-    "    ('scale', StandardScaler()),\n",
-    "    ('reg', Lasso(alpha=0.06))\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lasso.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 9))\n",
-    "plot_linear_coef(lasso['reg'].coef_, names=X_train.columns, sorted=True, ax=ax1);\n",
-    "plot_linear_coef(ridge['reg'].coef_, names=X_train.columns, sorted=True, ax=ax2);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lasso_cvs = cross_validate(\n",
-    "    lasso, X_train, y_train, return_estimator=True, cv=RepeatedKFold(n_splits=5, n_repeats=5)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lasso_coefs = pd.DataFrame(\n",
-    "   [model['reg'].coef_ for model in lasso_cvs['estimator']],\n",
-    "   columns=X.columns\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "_ = ax.boxplot(lasso_coefs, vert=False, labels=coefs.columns)"
+    "**If you are running locally**, you can uncomment the following cell to load the solution into the cell. On **Google Colab**, [see solution here](https://github.com/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/solutions/03-ex01-solutions.py)."
    ]
   },
   {
@@ -465,7 +405,7 @@
     "from sklearn.inspection import permutation_importance\n",
     "\n",
     "rf_perm_results = permutation_importance(rf, X_test, y_test,\n",
-    "                                        n_repeats=10, n_jobs=-1)"
+    "                                         n_repeats=5, n_jobs=2)"
    ]
   },
   {
@@ -509,6 +449,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If you are running locally**, you can uncomment the following cell to load the solution into the cell. On **Google Colab**, [see solution here](https://github.com/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/solutions/03-ex02-solutions.py).  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -535,8 +482,7 @@
     "data = load_breast_cancer()\n",
     "X, y = data.data, data.target\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, stratify=y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, random_state=42)"
    ]
   },
   {
@@ -597,7 +543,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Most features are not useful?"
    ]
@@ -610,9 +558,12 @@
    "source": [
     "from scipy.stats import spearmanr\n",
     "from scipy.cluster import hierarchy\n",
+    "from scipy.spatial import distance\n",
     "\n",
     "corr = spearmanr(X_train).correlation\n",
-    "corr_linkage = hierarchy.ward(corr)\n",
+    "corr_distance = 1 - np.abs((corr + corr.T) / 2)\n",
+    "np.fill_diagonal(corr_distance, 0.0)\n",
+    "corr_linkage = hierarchy.ward(distance.squareform(corr_distance))\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(18, 12))\n",
     "dendro = hierarchy.dendrogram(\n",
@@ -646,7 +597,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
@@ -656,6 +609,22 @@
     "for idx, cluster_id in enumerate(cluster_ids):\n",
     "    cluster_id_to_feature_ids[cluster_id].append(idx)\n",
     "selected_features = [v[0] for v in cluster_id_to_feature_ids.values()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Number of selected features:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(selected_features)"
    ]
   },
   {
@@ -729,7 +698,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.experimental import enable_hist_gradient_boosting\n",
     "from sklearn.ensemble import HistGradientBoostingClassifier "
    ]
   },
@@ -767,16 +735,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "top_features = features_sel[:2].tolist()\n",
+    "bottom_features = features_sel[-2:].tolist()\n",
     "plot_partial_dependence(hist, X_train_sel,\n",
-    "                        features=['mean radius', 'mean concavity',\n",
-    "                                  'mean texture', 'mean symmetry'],\n",
+    "                        features=top_features + bottom_features,\n",
     "                        feature_names=features_sel,\n",
     "                        n_cols=2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Exercise 3\n",
     "\n",
@@ -802,6 +773,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**If you are running locally**, you can uncomment the following cell to load the solution into the cell. On **Google Colab**, [see solution here](https://github.com/thomasjpfan/ml-workshop-intermediate-2-of-2/blob/master/notebooks/solutions/03-ex03-solutions.py). "
+   ]
   },
   {
    "cell_type": "code",
